--- a/componentes/src/app/pages/action-sheet/action-sheet.page.html
+++ b/componentes/src/app/pages/action-sheet/action-sheet.page.html
@@ -2,6 +2,9 @@
 
 
 
-<ion-content>
+<ion-content class="ion-padding">
 
+    <ion-button (click)="onClick()" expand="block" >
+        Mostrar ACTION-SHEET
+    </ion-button>
 </ion-content>
