--- a/04-noticias/src/app/components/article/article.component.html
+++ b/04-noticias/src/app/components/article/article.component.html
@@ -1,7 +1,22 @@
 <ion-card>
   <ion-card-subtitle class="ion-margin">
+
+    <ion-row class="ion-align-items-center" >
+      <ion-col class="ion-margin" (click)="openArticle()">
+        <span class="text-primary">{{index}}.</span>
+        <span class="article-source-name">{{article.source.name}}</span>
+      </ion-col>
+
+      <ion-col align="right">
+        <ion-button (click)="onOpenMenu()"  fill="clear">
+          <ion-icon slot="icon-only" name="ellipsis-vertical-outline"></ion-icon>
+        </ion-button>
+      </ion-col>
+    </ion-row>
+
     <span class="text-primary">{{ index }}. </span>
     <span class="article-source-name">{{ article.source.name }}</span>
+
   </ion-card-subtitle>
 
   <ion-card-title class="ion-padding-horizontal ion-margin-bottom">
@@ -11,6 +26,7 @@
   <ion-img 
     *ngIf="article.urlToImage"
     [src]="article.urlToImage"
+    (click)="openArticle()"
   >  
   </ion-img>
 
