--- a/04-noticias/src/app/pages/tab1/tab1.page.html
+++ b/04-noticias/src/app/pages/tab1/tab1.page.html
@@ -14,8 +14,11 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-articles 
-    [articles]="articles"
-  ></app-articles>
+  <app-articles [articles]="articles"></app-articles>
+
+  <ion-infinite-scroll threshold="25%" position="bottom" (ionInfinite)="loadData()">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 
 </ion-content>
