--- a/05-peliculasApp/src/app/tab1/tab1.page.html
+++ b/05-peliculasApp/src/app/tab1/tab1.page.html
@@ -18,4 +18,13 @@
     </ion-row>
   </ion-grid>
   <app-slideshow-poster [peliculas]="pelisRecientes"></app-slideshow-poster>
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Populares</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <app-slideshow-pares [peliculas]="populares"></app-slideshow-pares>
 </ion-content>
