--- a/05-peliculasApp/src/app/tab1/tab1.page.html
+++ b/05-peliculasApp/src/app/tab1/tab1.page.html
@@ -26,5 +26,5 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <app-slideshow-pares [peliculas]="populares"></app-slideshow-pares>
+  <app-slideshow-pares [peliculas]="populares" (cargarMas)="cargarMas()"></app-slideshow-pares>
 </ion-content>
